# notebooks-rl

./: .gitignore  README.md  requirements.txt  stf6-running-imitation-graphic.ipynb  trainning-sf4-tianshou.ipynb
.github/: FUNDING.yml
final_fight/: eval.ipynb  final_fight.py  running-interval.ipynb  running.ipynb  save-state.ipynb  save-video-from-keyboard.ipynb  save-video.ipynb  test-audio-video.ipynb  trainning-gail.ipynb  trainning-ppo.ipynb  trainning-record.ipynb
final_fight/tensorboard_ppo/run_20260428-101332/: events.out.tfevents.1777382012.DESKTOP-IMIQBNI.12184.0
final_fight/tensorboard_ppo/run_20260428-105154/: events.out.tfevents.1777384314.DESKTOP-IMIQBNI.14460.0
final_fight/tensorboard_ppo/run_20260428-133648/: events.out.tfevents.1777394208.DESKTOP-IMIQBNI.14588.0
final_fight/tensorboard_ppo/run_20260428-134028/: events.out.tfevents.1777394428.DESKTOP-IMIQBNI.6116.0
final_fight/tensorboard_ppo/run_20260428-144725/: events.out.tfevents.1777398445.DESKTOP-IMIQBNI.21060.0
final_fight/tensorboard_ppo/run_20260428-144851/: events.out.tfevents.1777398531.DESKTOP-IMIQBNI.33520.0
final_fight/tensorboard_ppo/run_20260428-144938/: events.out.tfevents.1777398578.DESKTOP-IMIQBNI.7008.0
final_fight/tensorboard_ppo/run_20260428-145000/: events.out.tfevents.1777398600.DESKTOP-IMIQBNI.28536.0
final_fight/tensorboard_ppo/run_20260428-145328/: events.out.tfevents.1777398808.DESKTOP-IMIQBNI.11552.0
final_fight/tensorboard_ppo/run_20260428-155919/: events.out.tfevents.1777402759.DESKTOP-IMIQBNI.13216.0
final_fight/tensorboard_ppo/run_20260428-175956/: events.out.tfevents.1777409996.DESKTOP-IMIQBNI.26072.0
final_fight/tensorboard_ppo/run_20260428-201332/: events.out.tfevents.1777418012.DESKTOP-IMIQBNI.26276.0
final_fight/tensorboard_ppo/run_20260428-215552/: events.out.tfevents.1777424152.DESKTOP-IMIQBNI.31848.0
final_fight/tensorboard_ppo/run_20260428-233853/: events.out.tfevents.1777430333.DESKTOP-IMIQBNI.16792.0
final_fight/tensorboard_ppo/run_20260429-092433/: events.out.tfevents.1777465473.DESKTOP-IMIQBNI.10576.0
final_fight/tensorboard_ppo/run_20260429-105125/: events.out.tfevents.1777470685.DESKTOP-IMIQBNI.28752.0
final_fight/tensorboard_ppo/run_20260429-113400/: events.out.tfevents.1777473240.DESKTOP-IMIQBNI.15988.0
final_fight/tensorboard_ppo/run_20260429-134328/: events.out.tfevents.1777481008.DESKTOP-IMIQBNI.6908.0
final_fight/tensorboard_ppo/run_20260429-140707/: events.out.tfevents.1777482427.DESKTOP-IMIQBNI.5644.0
final_fight/tensorboard_ppo/run_20260429-161911/: events.out.tfevents.1777490351.DESKTOP-IMIQBNI.32884.0
final_fight/tensorboard_ppo/run_20260429-170604/: events.out.tfevents.1777493164.DESKTOP-IMIQBNI.34496.0
gta5/: running-imitation-lstm.ipynb
new_super_mario_bros_wii/: eval.ipynb  eval.json  mario.py  running.ipynb  save-state.ipynb  trainning-jax-ppo.ipynb  trainning-recurrent-ppo.ipynb
re4/: convert_to_hdf5.ipynb  imitation-record.ipynb  resident4.py  running-diffusion.ipynb  running-imitation-lstm.ipynb  running-imitation.ipynb  training-re4-diffusion.ipynb  trainning-imitation.ipynb
re_requiem/: imitatation-hg-dagger.ipynb  imitatation-record.ipynb  resident_requiem.py  running-imitation-lstm.ipynb  trainning-imitation.ipynb
sdlarch-rl/: .gitignore  CMakeLists.txt  LICENSE  README.md  common.py
sdlarch-rl/sdlarch_rl/: __init__.py  sdlenv.py
sdlarch-rl/sdlarch_rl/roms/FinalFight-FBNeo/: default.state  final.state  meta.json  middle.state  reward.py
sdlarch-rl/sdlarch_rl/roms/FinalFight-Mame/: reward.py
sdlarch-rl/sdlarch_rl/roms/NewSuperMarioBros-Wii/: meta.json  reward.py
sdlarch-rl/sdlarch_rl/roms/StarFox-Snes/: default.state  meta.json
sdlarch-rl/sdlarch_rl/utils/: discretizer.py  stf6.py  stf6_imitation.py  utils.py
sdlarch-rl/src/: retroemulator.cpp  sdlarch.cpp  sdlarch.h
stf4/: trainning-sf4.ipynb
stf6/: stf6-imitation-record.ipynb  stf6-running-imitation.ipynb  stf6-running.ipynb  stf6-trainning-imitation.ipynb  stf6.ipynb
utils/: utils.py
